// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchNoResults should match snapshot for BNF site 1`] = `
<body>
  <div>
    <section
      aria-labelledby="browse-for-content"
    >
      <h3
        id="browse-for-content"
      >
        Browse for content
      </h3>
      <p>
        Try browsing our:
      </p>
      <ul
        aria-label="Ways to browse for content"
      >
        <li>
          <a
            href="/drugs/"
          >
            drugs A to Z list
          </a>
        </li>
        <li>
          <a
            href="/treatment-summaries/"
          >
            treatment summaries A to Z list
          </a>
        </li>
        <li>
          <a
            href="/interactions/"
          >
            interactions A to Z list
          </a>
        </li>
      </ul>
    </section>
    <section
      aria-labelledby="try-other-services"
    >
      <h3
        id="try-other-services"
      >
        Check our other services
      </h3>
      <p>
        See if there are search results for 
        <b>
          aspirin
        </b>
         on our other services:
      </p>
      <ul
        aria-label="Search for \\"aspirin\\" on our other services"
      >
        <li>
          <a
            href="https://bnfc.nice.org.uk/search/?q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            BNFC
          </a>
        </li>
        <li>
          <a
            href="https://www.nice.org.uk/search?om=[{%22ndt%22:[%22Guidance%22]}]&ps=15&q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            NICE guidance
          </a>
        </li>
        <li>
          <a
            href="https://cks.nice.org.uk/search/?q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            CKS
          </a>
        </li>
      </ul>
      <section
        aria-labelledby="what-are-other-services"
      >
        <h4
          id="what-are-other-services"
        >
          What are our other services?
        </h4>
        <h5>
          British National Formulary for Children (BNFC)
        </h5>
        <p>
          Information on the selection, prescribing, dispensing and administration of drugs to children.
        </p>
        <h5>
          NICE guidance
        </h5>
        <p>
          We use the best available evidence to develop recommendations that guide decisions in health, public health and social care.
        </p>
        <h5>
          Clinical Knowledge Summaries (CKS)
        </h5>
        <p>
          Concise, accessible summaries of current evidence for primary care professionals. Information is presented as patient scenarios or clinical presentations with answers and links to supporting evidence.
        </p>
      </section>
    </section>
  </div>
</body>
`;

exports[`SearchNoResults should match snapshot for BNFC site 1`] = `
<body>
  <div>
    <section
      aria-labelledby="browse-for-content"
    >
      <h3
        id="browse-for-content"
      >
        Browse for content
      </h3>
      <p>
        Try browsing our:
      </p>
      <ul
        aria-label="Ways to browse for content"
      >
        <li>
          <a
            href="/drugs/"
          >
            drugs A to Z list
          </a>
        </li>
        <li>
          <a
            href="/treatment-summaries/"
          >
            treatment summaries A to Z list
          </a>
        </li>
        <li>
          <a
            href="/interactions/"
          >
            interactions A to Z list
          </a>
        </li>
      </ul>
    </section>
    <section
      aria-labelledby="try-other-services"
    >
      <h3
        id="try-other-services"
      >
        Check our other services
      </h3>
      <p>
        See if there are search results for 
        <b>
          aspirin
        </b>
         on our other services:
      </p>
      <ul
        aria-label="Search for \\"aspirin\\" on our other services"
      >
        <li>
          <a
            href="https://bnf.nice.org.uk/search/?q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            BNF
          </a>
        </li>
        <li>
          <a
            href="https://www.nice.org.uk/search?om=[{%22ndt%22:[%22Guidance%22]}]&ps=15&q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            NICE guidance
          </a>
        </li>
        <li>
          <a
            href="https://cks.nice.org.uk/search/?q=aspirin&sp=on"
            rel="noreferrer"
            target="_blank"
          >
            CKS
          </a>
        </li>
      </ul>
      <section
        aria-labelledby="what-are-other-services"
      >
        <h4
          id="what-are-other-services"
        >
          What are our other services?
        </h4>
        <h5>
          British National Formulary (BNF)
        </h5>
        <p>
          Information on the selection, prescribing, dispensing and administration of drugs.
        </p>
        <h5>
          NICE guidance
        </h5>
        <p>
          We use the best available evidence to develop recommendations that guide decisions in health, public health and social care.
        </p>
        <h5>
          Clinical Knowledge Summaries (CKS)
        </h5>
        <p>
          Concise, accessible summaries of current evidence for primary care professionals. Information is presented as patient scenarios or clinical presentations with answers and links to supporting evidence.
        </p>
      </section>
    </section>
  </div>
</body>
`;
